docker-kube/namespace-app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: note-app
  labels:
    name: note-app
    env: production
