docker-kube/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-do
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - note.natadesu.my.id
    secretName: letsencrypt-prod
  rules:
  - host: note.natadesu.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: note-app-service
            port:
              number: 80
